--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+/* sources I used during development:
+https://travis.media/how-to-make-an-item-grow-on-hover-with-css/
+https://css-tricks.com/a-complete-guide-to-custom-properties/
+https://getcssscan.com/css-box-shadow-examples*/
+
 :root {
   --clr-light-mint: #F1FFFA;
-  --clr-medium-lavender: #675978;
+  --clr-medium-grey-blue: rgb(148, 148, 163);
   --clr-dark-grey: #292929;
   --clr-medium-turquoise: #05A8AA;
 
@@ -13,6 +18,7 @@ body {
   font-weight: 600;
 }
 
+
 button {
   background-color: var(--clr-medium-turquoise);
 }
@@ -21,19 +27,39 @@ img {
   border: 3px solid var(--clr-medium-turquoise);
 }
 
+#nav-bar {
+  background-color: var(--clr-medium-turquoise);
+  width: 100%;
+}
+
 #back-btn {
   background-color: var(--clr-medium-turquoise);
   color: var(--clr-light-mint);
 }
 
 #app-container {
-  background-color: var(--clr-medium-lavender);
+  background-color: var(--clr-medium-grey-blue);
   height: 100vh;
   width: 100%;
 }
 
 #home-container {
-  background-color: var(--clr-medium-lavender);
+  background-color: var(--clr-medium-grey-blue);
+}
+
+.nav-link {
+  color: var(--clr-light-mint);
+  text-decoration: none;
+  transition: all .2s ease-in-out; 
+}
+
+.nav-link:focus, .nav-link:hover  {
+  color: var(--clr-light-mint);
+}
+
+.nav-link:hover {
+  color: rgb(133, 85, 189);
+  transform: scale(1.3); 
 }
 
 .info-card {
