--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,3 +1,26 @@
+#nav-icon img {
+  margin: .2em;
+  padding: 0px;
+  width: 36px;
+}
+
+.nav-link {
+  font-size: 1.1em;
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+  transition: all .1s ease-in-out;
+  vertical-align: middle;
+}
+
+#nav-itens-container {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 3em;
+}
+
 @media only screen and (min-width: 600px) {
   #nav-itens-container {
     gap: 3em;
