--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,9 +1,12 @@
+/* many thanks to:
+https://codepen.io/alphardex/pen/ExaZgxp*/
+
 #home-container {
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 3vh;
-  height: 100vh;
+  height: 85%;
   justify-content: flex-start;
   margin-top: 5vh;
   text-align: center;
@@ -15,37 +18,73 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
-#info-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 2em;
-  height: 100%;
-  width: 100%;
-}
-
-#info-section h3 {
-  margin-bottom: 1em;
-}
-
-.card-container {
+#card-section {
+  align-items: flex-start;
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
   gap: 2em;
+  height: 40%;
   justify-content: center;
-  height: 50%;
+  padding: .5em;
+  perspective: 800px;
+  width: 80vw;
+}
+
+.card {
+  align-items: center;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  height: 240px;
+  justify-content: center;
+  padding: 1em;
+  position: relative;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  width: 250px;
+}
+
+.card:hover {
+  transform: rotateY(180deg);
+}
+
+.card-front {
+  backface-visibility: hidden;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  position: absolute;
+  text-align: center;
+  transition: .8s ease-in-out;
   width: 100%;
 }
 
-.info-card {
+.card-back {
+  align-items: center;
+  align-content: center;
+  backface-visibility: hidden;
   border-radius: 20px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-flow: wrap;
+  height: 100%;
   justify-content: center;
-  padding: 5em;
+  position: absolute;
   text-align: center;
+  transition: 1s ease-in-out;
+  transform: rotateY(180deg);
+  width: 100%;
+}
+
+.backend-skill, .frontend-skill {
+  margin: 5px 15px 5px;
 }
 
 @media only screen and (min-width: 600px) {
