--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* sources I used during development:
+/* many thanks to:
 https://travis.media/how-to-make-an-item-grow-on-hover-with-css/
 https://css-tricks.com/a-complete-guide-to-custom-properties/
 https://getcssscan.com/css-box-shadow-examples*/
@@ -6,8 +6,8 @@ https://getcssscan.com/css-box-shadow-examples*/
 :root {
   --clr-light-mint: #F1FFFA;
   --clr-medium-grey-blue: rgb(148, 148, 163);
-  --clr-dark-grey: #292929;
   --clr-medium-turquoise: #05A8AA;
+  --clr-deep-violet: rgb(133, 85, 189);
 
   --ff-main: 'Rubik', sans-serif;
 }
@@ -23,7 +23,7 @@ button {
   background-color: var(--clr-medium-turquoise);
 }
 
-img {
+#picture-camila {
   border: 3px solid var(--clr-medium-turquoise);
 }
 
@@ -47,21 +47,34 @@ img {
   background-color: var(--clr-medium-grey-blue);
 }
 
-.nav-link {
-  color: var(--clr-light-mint);
-  text-decoration: none;
-  transition: all .2s ease-in-out; 
+.h3-dev-title {
+  color: var(--clr-deep-violet);
 }
 
-.nav-link:focus, .nav-link:hover  {
+.nav-link {
+  color: var(--clr-light-mint);
+}
+
+.nav-link:focus {
   color: var(--clr-light-mint);
 }
 
 .nav-link:hover {
-  color: rgb(133, 85, 189);
-  transform: scale(1.3); 
+  color: var(--clr-deep-violet);
+  transform: scale(1.2); 
 }
 
-.info-card {
+.card {
   background-color: var(--clr-medium-turquoise);
+  color: var(--clr-deep-violet);
+}
+
+.card-front {
+  background-color: var(--clr-medium-turquoise);
+  color: var(--clr-light-mint);
+}
+
+.card-back {
+  background-color: var(--clr-medium-grey-blue);
+  color: var(--clr-light-mint);
 }
