pequena alteração no css de Home para melhorar footer

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -9,6 +9,7 @@ https://codepen.io/alphardex/pen/ExaZgxp*/
   height: 85%;
   justify-content: flex-start;
   margin-top: 5vh;
+  padding-bottom: 2.5rem;
   text-align: center;
   width: 100vw;
 }
