--- a/src/Pages/Projects.css
+++ b/src/Pages/Projects.css
@@ -2,10 +2,11 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 3vh;
+  gap: 2vh;
   height: 85%;
   justify-content: flex-start;
   margin-top: 5vh;
+  padding-bottom: 2.5rem;
   text-align: center;
   width: 100vw;
 }
